--- a/user/notifications.html
+++ b/user/notifications.html
@@ -56,12 +56,14 @@
         
         <!-- 主内容区 -->
         <div class="flex-1 overflow-auto">
-            <!-- 顶部标题 -->
+            <!-- 顶部导航 -->
             <div class="sticky top-0 z-10 bg-white">
                 <div class="flex items-center px-5 py-4">
-                        <i class="fas fa-arrow-left text-gray-800 text-lg"></i>
+                    <i class="fas fa-arrow-left text-gray-800 text-lg back-btn"></i>
                     <div class="flex-1 text-center text-lg font-medium">消息通知</div>
+                    <i class="fas fa-share-alt text-gray-800 text-lg"></i>
                 </div>
+            </div>
                 
                 <!-- 消息类型选项卡 -->
                 <div class="flex border-b">
