--- a/user/home.html
+++ b/user/home.html
@@ -6,40 +6,7 @@
     <title>一拍即租 - 首页</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        body {
-            font-family: 'PingFang SC', 'Helvetica Neue', Arial, sans-serif;
-            background-color: #f8f9fa;
-        }
-        .status-bar {
-            height: 44px;
-            background-color: #ffffff;
-        }
-        .app-container {
-            max-width: 390px;
-            height: 844px;
-            margin: 0 auto;
-            background-color: #ffffff;
-            border-radius: 40px;
-            overflow: hidden;
-            position: relative;
-            box-shadow: 0 0 20px rgba(0,0,0,0.1);
-        }
-        .nav-bar {
-            height: 83px;
-            background-color: #ffffff;
-            border-top: 1px solid #f0f0f0;
-        }
-        .polaroid-card {
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-            transition: all 0.3s ease;
-        }
-        .polaroid-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 16px rgba(0,0,0,0.12);
-        }
-    </style>
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
     <div class="app-container flex flex-col">
@@ -60,7 +27,7 @@
                 <div class="flex items-center justify-between mb-4">
                     <div class="text-2xl font-bold text-gray-800">一拍即租</div>
                     <div class="flex space-x-3">
-                        <i class="fas fa-bell text-gray-600 text-xl"></i>
+                        <a href="notifications.html"><i class="fas fa-bell text-gray-600 text-xl"></i></a>
                         <i class="fas fa-heart text-gray-600 text-xl"></i>
                     </div>
                 </div>
@@ -118,7 +85,7 @@
                     <div class="text-sm text-gray-500">查看全部 <i class="fas fa-chevron-right text-xs ml-1"></i></div>
                 </div>
                 <div class="grid grid-cols-2 gap-4">
-                    <div class="polaroid-card bg-white p-3">
+                    <a href="product_detail.html" class="polaroid-card bg-white p-3">
                         <div class="rounded-lg overflow-hidden mb-3 bg-gray-100">
                             <img src="https://images.unsplash.com/photo-1526170375885-4d8ecf77b99f?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="w-full h-32 object-cover">
                         </div>
@@ -127,8 +94,8 @@
                             <div class="text-red-500 font-bold">¥15/天</div>
                             <div class="text-xs text-gray-500">已租 328</div>
                         </div>
-                    </div>
-                    <div class="polaroid-card bg-white p-3">
+                    </a>
+                    <a href="product_detail.html" class="polaroid-card bg-white p-3">
                         <div class="rounded-lg overflow-hidden mb-3 bg-gray-100">
                             <img src="https://images.unsplash.com/photo-1526170375885-4d8ecf77b99f?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="w-full h-32 object-cover">
                         </div>
@@ -137,7 +104,7 @@
                             <div class="text-red-500 font-bold">¥20/天</div>
                             <div class="text-xs text-gray-500">已租 156</div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
             
@@ -148,7 +115,7 @@
                     <div class="text-sm text-gray-500">查看全部 <i class="fas fa-chevron-right text-xs ml-1"></i></div>
                 </div>
                 <div class="grid grid-cols-2 gap-4">
-                    <div class="polaroid-card bg-white p-3">
+                    <a href="product_detail.html" class="polaroid-card bg-white p-3">
                         <div class="rounded-lg overflow-hidden mb-3 bg-gray-100">
                             <img src="https://images.unsplash.com/photo-1526170375885-4d8ecf77b99f?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="w-full h-32 object-cover">
                         </div>
@@ -157,8 +124,8 @@
                             <div class="text-red-500 font-bold">¥25/天</div>
                             <div class="text-xs text-gray-500">新品</div>
                         </div>
-                    </div>
-                    <div class="polaroid-card bg-white p-3">
+                    </a>
+                    <a href="product_detail.html" class="polaroid-card bg-white p-3">
                         <div class="rounded-lg overflow-hidden mb-3 bg-gray-100">
                             <img src="https://images.unsplash.com/photo-1526170375885-4d8ecf77b99f?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="w-full h-32 object-cover">
                         </div>
@@ -167,7 +134,7 @@
                             <div class="text-red-500 font-bold">¥22/天</div>
                             <div class="text-xs text-gray-500">新品</div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -183,14 +150,20 @@
                 <div class="text-xs text-gray-400 mt-1">分类</div>
             </div>
             <div class="flex flex-col items-center">
-                <i class="fas fa-shopping-bag text-gray-400 text-xl"></i>
-                <div class="text-xs text-gray-400 mt-1">订单</div>
+                <a href="orders.html" class="flex flex-col items-center">
+                    <i class="fas fa-shopping-bag text-gray-400 text-xl"></i>
+                    <div class="text-xs text-gray-400 mt-1">订单</div>
+                </a>
             </div>
             <div class="flex flex-col items-center">
-                <i class="fas fa-user text-gray-400 text-xl"></i>
-                <div class="text-xs text-gray-400 mt-1">我的</div>
+                <a href="profile.html" class="flex flex-col items-center">
+                    <i class="fas fa-user text-gray-400 text-xl"></i>
+                    <div class="text-xs text-gray-400 mt-1">我的</div>
+                </a>
             </div>
         </div>
     </div>
+    
+    <script src="../assets/js/main.js"></script>
 </body>
 </html>
