--- a/user/product_detail.html
+++ b/user/product_detail.html
@@ -6,35 +6,7 @@
     <title>一拍即租 - 产品详情</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        body {
-            font-family: 'PingFang SC', 'Helvetica Neue', Arial, sans-serif;
-            background-color: #f8f9fa;
-        }
-        .status-bar {
-            height: 44px;
-            background-color: #ffffff;
-        }
-        .app-container {
-            max-width: 390px;
-            height: 844px;
-            margin: 0 auto;
-            background-color: #ffffff;
-            border-radius: 40px;
-            overflow: hidden;
-            position: relative;
-            box-shadow: 0 0 20px rgba(0,0,0,0.1);
-        }
-        .nav-bar {
-            height: 83px;
-            background-color: #ffffff;
-            border-top: 1px solid #f0f0f0;
-        }
-        .tab-active {
-            color: #EC4899;
-            border-bottom: 2px solid #EC4899;
-        }
-    </style>
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
     <div class="app-container flex flex-col">
@@ -53,7 +25,7 @@
             <!-- 顶部导航 -->
             <div class="sticky top-0 z-10 bg-white">
                 <div class="flex items-center px-5 py-4">
-                    <i class="fas fa-arrow-left text-gray-800 text-lg"></i>
+                    <i class="fas fa-arrow-left text-gray-800 text-lg back-btn"></i>
                     <div class="flex-1 text-center text-lg font-medium">产品详情</div>
                     <i class="fas fa-share-alt text-gray-800 text-lg"></i>
                 </div>
@@ -73,20 +45,17 @@
             <div class="px-5 mb-4">
                 <div class="text-xl font-bold mb-2">富士 instax mini 9 拍立得相机</div>
                 <div class="flex items-center mb-3">
-                    <div class="text-re
-                    <div class="flex items-center mb-3">
-                        <div class="text-red-500 text-xl font-bold mr-2">¥15/天</div>
-                        <div class="text-gray-400 text-sm line-through">¥20/天</div>
-                        <div class="ml-auto flex items-center">
-                            <i class="fas fa-star text-yellow-400 text-sm"></i>
-                            <span class="text-sm ml-1">4.8</span>
-                            <span class="text-gray-400 text-sm ml-1">(328条评价)</span>
-                        </div>
+                    <div class="text-red-500 text-xl font-bold mr-2">¥15/天</div>
+                    <div class="text-gray-400 text-sm line-through">¥20/天</div>
+                    <div class="ml-auto flex items-center">
+                        <i class="fas fa-star text-yellow-400 text-sm"></i>
+                        <span class="text-sm ml-1">4.8</span>
+                        <span class="text-gray-400 text-sm ml-1">(328条评价)</span>
                     </div>
-                    <div class="flex items-center text-sm text-gray-500">
-                        <div class="mr-4">累计租出: 2,156次</div>
-                        <div>好评率: 98%</div>
-                    </div>
+                </div>
+                <div class="flex items-center text-sm text-gray-500">
+                    <div class="mr-4">累计租出: 2,156次</div>
+                    <div>好评率: 98%</div>
                 </div>
                 
                 <!-- 租赁选项 -->
@@ -177,11 +146,13 @@
                     <i class="far fa-comment-dots text-xl text-gray-500"></i>
                     <div class="text-xs text-gray-500 mt-1">客服</div>
                 </div>
-                <button class="flex-1 bg-gradient-to-r from-pink-500 to-red-500 text-white py-3 rounded-full font-medium">
+                <button class="flex-1 primary-btn py-3 rounded-full font-medium" onclick="window.location.href='orders.html'">
                     立即租赁
                 </button>
             </div>
         </div>
-    </body>
-    </html>
+    </div>
     
+    <script src="../assets/js/main.js"></script>
+</body>
+</html>
