--- a/user/home.html
+++ b/user/home.html
@@ -87,7 +87,7 @@
                 <div class="grid grid-cols-2 gap-4">
                     <a href="product_detail.html" class="polaroid-card bg-white p-3">
                         <div class="rounded-lg overflow-hidden mb-3 bg-gray-100">
-                            <img src="https://images.unsplash.com/photo-1526170375885-4d8ecf77b99f?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="w-full h-32 object-cover">
+                            <img src="https://github.com/Chinaduanyun/Insta_Rental_Platform/blob/main/pic/1.png" class="w-full h-32 object-cover">
                         </div>
                         <div class="text-sm font-medium mb-1 truncate">富士 instax mini 9</div>
                         <div class="flex justify-between items-center">
